<resources>
    <string name="app_name">Lab 03</string>
    <string name="email">Your E-mail address:</string>
    <string name="password">Your password:</string>
    <string name="button">LOGIN</string>
    <string name="email_hint">Enter your E-mail here..</string>
    <string name="pass_hint">Enter your password here..</string>
    <string name="name_hint">Enter your name..</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="picture">Your picture:</string>
    <string name="instruction">Click the button above to take a picture</string>
    <string name="warning">User refused to capture a picture.</string>
    <string name="gotochat">Go to chat</string>
    <string name="send">SEND</string>
    <string name="receive">receive</string>
    <string name="type_here">Type here</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Messsage Here</string>
</resources>